# multi-screen

./: .gitignore  CMakeLists.txt  README.md
ffmpeg/: CMakeLists.txt.in  server_side.patch
nasm/: CMakeLists.txt.in
player/: CMakeLists.txt  display_to_screen.cpp  display_to_screen.h  main.cpp  receive_from_server.cpp  receive_from_server.h  safe_queue.cpp  safe_queue.h
spdlog/: CMakeLists.txt.in
